[tool.poetry]
name = "cloudflareaccessipupdater"
version = "0.1.0"
description = ""
authors = ["Ethan <ethan.harriz@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
requests-oauthlib = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
